<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintVertical_bias="0"
            />


        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_id"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/login_id" />



        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            android:textColor="@color/white"
            android:background="@color/wine"
            />

        <TextView
            android:id="@+id/do_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_sign_up"
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>