<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintVertical_bias="0"

            />


        <EditText
            android:id="@+id/sign_up_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_id"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_text"
            android:maxLength="16"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/id_check_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_id"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_password"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/id_check_text_view"
            android:maxLength="16"

            />

        <TextView
            android:id="@+id/pw_check_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_password"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_name"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/pw_check_text_view"
            android:maxLength="16"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/name_check_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_name"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_email"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_up_email_auth_number_get"
            app:layout_constraintTop_toBottomOf="@+id/name_check_text_view"
            app:layout_constraintHorizontal_weight="7"
            android:inputType="textEmailAddress"
            />

        <Button
            android:id="@+id/sign_up_email_auth_number_get"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_auth_text"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/name_check_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sign_up_email"
            app:layout_constraintHorizontal_weight="3"
            />

        <EditText
            android:id="@+id/sign_up_email_auth_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_auth_hint"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_up_email_auth_button"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email"
            app:layout_constraintHorizontal_weight="7"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/sign_up_email_auth_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email_auth_edit"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/sign_up_email_auth_button"
            android:text="@string/sign_up_email_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sign_up_email_auth_edit"
            app:layout_constraintHorizontal_weight="3"
            />



        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email_auth_text_view"
            android:textColor="@color/white"
            android:background="@color/wine"
            />

        <TextView
            android:id="@+id/do_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_login"
            android:textColor="@color/white"
            android:padding="20dp"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>