<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateChattingRoomActivity">

    <!--툴바 사용-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_chatting_room_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorToolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_chatting_room_toolbar_title"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/create_chatting_room_complete_button"
        app:layout_constraintTop_toBottomOf="@id/create_chatting_room_toolbar">

        <TextView
            android:id="@+id/create_chatting_room_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_chatting_room_title_text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/create_chatting_room_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_chatting_room_title_text_view" />

        <TextView
            android:id="@+id/create_chatting_room_tag_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_chatting_room_tag_text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_chatting_room_title_edit_text"

            />

        <EditText
            android:id="@+id/create_chatting_room_tag_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_chatting_room_tag_text_view" />

        <TextView
            android:id="@+id/create_chatting_room_image_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_chatting_room_image_text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_chatting_room_tag_edit_text"/>


        <ImageView
            android:id="@+id/create_chatting_room_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_chatting_room_image_text"
            android:src="@drawable/default_image_thumbnail"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/create_chatting_room_image_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_chatting_room_image_select_text"
            app:layout_constraintTop_toBottomOf="@id/create_chatting_room_image_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/create_chatting_room_complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo500"
        android:text="@string/chatting_room_complete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>