<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    >

    <View
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/gray300"

        />

    <TextView
        android:id="@+id/video_reply_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_reply_information"
        android:textColor="@color/windowBackground"
        android:background="@color/gray200"
        android:textAllCaps="false"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/video_reply_reply_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/video_reply_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/video_reply_reply"
        android:textColor="@color/windowBackground"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/video_reply_reply_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/video_reply_information"
        app:layout_constraintLeft_toRightOf="@id/video_reply_reply_text_view"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:text="0"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tune_gray_24dp"
        app:layout_constraintTop_toBottomOf="@id/video_reply_information"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"


        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_reply_reply_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/video_reply_reply_text_view"
        android:layout_marginTop="15dp"
        android:paddingBottom="5dp"
        >

        <ImageView
            android:id="@+id/video_reply_profile_image_view"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_account_circle_gray_24dp"
            app:layout_constraintRight_toLeftOf="@id/video_reply_edit_text_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/video_reply_edit_text_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/video_reply_profile_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="7dp"
            android:text="@string/video_reply_reply_add"

            />





    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_reply_reply_add_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="@color/gray300"

        />









</androidx.constraintlayout.widget.ConstraintLayout>